--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,5 @@
 <p style="text-align: center; background-color: white;">
-  <a href="{{site.baseurl}}/">Home</a> |
-  <a href="{{site.baseurl}}/about/contact/">Contact</a> | 
-  <a href="{{site.baseurl}}/about/resume">Resume</a> | 
+  <a href="ap3885.github.io/">Home</a> |
+  <a href="ap3885.github.io/about/contact/">Contact</a> | 
+  <a href="ap3885.github.io/about/resume">Resume</a> | 
 </p>
