--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,5 @@
 <p style="text-align: center; background-color: white;">
-   <a href="{{site.baseurl}}/">Home</a> |
+  <a href="{{site.baseurl}}">Home</a> |
   <a href="/about/contact/">Contact</a> | 
   <a href="/about/resume/">Resume</a> | 
 </p>
