--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
-<p style="text-align: center; background-color: white;">
+<p style="text-align: center; background-color: blue-translucent;">
   <a href="/">Home</a> |
   <a href="/about/contact">Contact</a> | 
   <a href="/about/resume">Resume</a> | 
