--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,5 @@
 <p style="text-align: center; color:white; background-color: translucent-white;">
-  <a href="/">Home</a> |
-  <a href="/about/contact">Contact</a> | 
-  <a href="/about/resume">Resume</a> | 
+  <a href="/" style="color:white;">Home</a> |
+  <a href="/about/contact" style="color:white;">Contact</a> | 
+  <a href="/about/resume" style="color:white;">Resume</a> | 
 </p>
