--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,4 +2,5 @@
   <a href="/" style="color:white;">Home</a> |
   <a href="/about/contact" style="color:white;">Contact</a> | 
   <a href="/about/resume" style="color:white;">Resume</a> | 
+  <a href="/projects" style="color:white;">Projects</a>
 </p>
