added internships link

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,5 +2,6 @@
   <a href="/" style="color:white;">Home</a> |
   <a href="/about/contact" style="color:white;">Contact</a> | 
   <a href="/about/resume" style="color:white;">Resume</a> | 
-  <a href="/projects" style="color:white;">Projects</a>
+  <a href="/projects" style="color:white;">Projects</a> |
+  <a href="/internships" style="color:white;">Internships</a>
 </p>
