--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
-<p style="text-align: center; color:white; background-color: translucent-white;">
+<p style="text-align: center; color:black; background-color: translucent-white;">
   <a href="/" style="color:white;">Home</a> |
   <a href="/about/contact" style="color:white;">Contact</a> | 
   <a href="/about/resume" style="color:white;">Resume</a> | 
