--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,7 @@
-<p style="text-align: center; color:black; background-color: translucent-white;">
-  <a href="/" style="color:black;">Home</a> |
-  <a href="/about/contact" style="color:black;">Contact</a> | 
-  <a href="/about/resume" style="color:black;">Resume</a> | 
-  <a href="/projects" style="color:black;">Projects</a> |
-  <a href="/internships" style="color:black;">Internships</a>
+<p style="text-align: center; color:white; background-color: translucent-white;">
+  <a href="/" style="color:white;">Home</a> |
+  <a href="/about/contact" style="color:white;">Contact</a> | 
+  <a href="/about/resume" style="color:white;">Resume</a> | 
+  <a href="/projects" style="color:white;">Projects</a> |
+  <a href="/internships" style="color:white;">Internships</a>
 </p>
